--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- IMAGE CONTAINER -->
         <div class="image-container">
            
-            <div class="canvetest-img"></div>
+            <div class="background-image"></div>
 
         </div>
         <!-- /IMAGE CONTAINER -->
