--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- IMAGE CONTAINER -->
         <div class="image-container">
            
-            <div class="background-image" style="background-image: url(img/work/item-3.jpg)"></div>
+            <div class="background-img"></div>
 
         </div>
         <!-- /IMAGE CONTAINER -->
