--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <!-- IMAGE CONTAINER -->
         <div class="image-container">
            
-            <div class="background-img"></div>
+            <div class="background-img">
+                <img src="img/canvetest.jpg" alt="Forest" width="50%" height="800">
+            </div>
 
         </div>
         <!-- /IMAGE CONTAINER -->
